Fixed images on mobile and media query
Fixed the padding on the images so that they wouldn't be overlapping each other. Also removed 100px height so the images would no longer be stretched.

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ img {
     width: 50%;
     margin-left: auto;
     margin-right: auto;
+    padding: 10px;
 }
 
 /*MxD page css --will change later so it doesnt mess up everyone elses page*/
@@ -144,6 +145,6 @@ section p{
     }
 
     img {
-        height: 100px;
+        margin: 0;
     }
 }
